--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,43 +3,69 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation.xml"
-    android:label="@string/title_main_screen"
+    android:label="tilte"
     app:startDestination="@id/mainAuthenticationFragment">
     <fragment
         android:id="@+id/mainAuthenticationFragment"
-        android:name="com.example.islamicsongs.authentication.MainAuthenticationFragment"
-        android:label="MainAuthenticationFragment" >
+        android:name="com.example.islamicsongs.ui.authentication.MainAuthenticationFragment"
+        android:label="MainAuthenticationFragment">
         <action
             android:id="@+id/action_mainAuthenticationFragment_to_signInFragment"
-            app:destination="@id/signInFragment" />
+            app:destination="@id/signInFragment"
+            app:popUpTo="@id/mainAuthenticationFragment" />
         <action
             android:id="@+id/action_mainAuthenticationFragment_to_signUpFragment"
-            app:destination="@id/signUpFragment" />
+            app:destination="@id/signUpFragment"
+            app:popUpTo="@id/mainAuthenticationFragment" />
+        <action
+            android:id="@+id/action_mainAuthenticationFragment_to_mainScreenFragment2"
+            app:destination="@id/mainScreenFragment2"
+            app:popUpTo="@id/mainAuthenticationFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/signInFragment"
-        android:name="com.example.islamicsongs.authentication.SignInFragment"
-        android:label="SignInFragment" >
+        android:name="com.example.islamicsongs.ui.authentication.SignInFragment"
+        android:label="SignInFragment">
         <action
             android:id="@+id/action_signInFragment_to_mainScreenFragment2"
-            app:destination="@id/mainScreenFragment2" />
+            app:destination="@id/mainScreenFragment2"
+            app:popUpTo="@id/mainAuthenticationFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_signInFragment_to_signUpFragment"
-            app:destination="@id/signUpFragment" />
+            app:destination="@id/signUpFragment"
+            app:popUpTo="@id/mainAuthenticationFragment" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="com.example.islamicsongs.authentication.SignUpFragment"
-        android:label="SignUpFragment" >
+        android:name="com.example.islamicsongs.ui.authentication.SignUpFragment"
+        android:label="SignUpFragment">
         <action
             android:id="@+id/action_signUpFragment_to_mainScreenFragment2"
-            app:destination="@id/mainScreenFragment2" />
+            app:destination="@id/mainScreenFragment2"
+            app:popUpTo="@id/mainAuthenticationFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_signUpFragment_to_signInFragment"
-            app:destination="@id/signInFragment" />
+            app:destination="@id/signInFragment"
+            app:popUpTo="@id/mainAuthenticationFragment" />
     </fragment>
     <fragment
         android:id="@+id/mainScreenFragment2"
-        android:name="com.example.islamicsongs.main_screen.MainScreenFragment"
-        android:label="MainScreenFragment" />
+        android:name="com.example.islamicsongs.ui.main_screen.MainScreenFragment"
+        android:label="MainScreenFragment">
+        <action
+            android:id="@+id/action_mainScreenFragment2_to_playMusicFragment"
+            app:destination="@id/playMusicFragment"
+            app:popUpTo="@id/mainScreenFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/playMusicFragment"
+        android:name="com.example.islamicsongs.ui.playmusic.PlayMusicFragment"
+        android:label="PlayMusicFragment" >
+        <argument
+            android:name="playList"
+            app:argType="com.example.islamicsongs.data.models.PLayLists" />
+    </fragment>
 </navigation>
