--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
+  <color name="primaryColor">#ff3300</color>
+  <color name="primaryLightColor">#ff6e38</color>
+  <color name="primaryDarkColor">#c30000</color>
+  <color name="secondaryColor">#ff7300</color>
+  <color name="secondaryLightColor">#ffa441</color>
+  <color name="secondaryDarkColor">#c44300</color>
+  <color name="primaryTextColor">#000000</color>
+  <color name="secondaryTextColor">#000000</color>
 
+  <color name="statusBarColor">#ff7300</color>
 
-    <color name="primaryColor">#019147</color>
-    <color name="primaryLightColor">#4ec274</color>
-    <color name="primaryDarkColor">#00621d</color>
-    <color name="secondaryColor">#ff9822</color>
-    <color name="secondaryLightColor">#ffc957</color>
-    <color name="secondaryDarkColor">#c66900</color>
-    <color name="primaryTextColor">#000000</color>
-    <color name="secondaryTextColor">#000000</color>
-    <color name="yellow">#FFC801</color>
+  <color name="black">#000000</color>
+  <color name="white">#FFFFFF</color>
 
-
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    
+  <color name="gray3">#f0f0f0</color>
 </resources>
